name:                serealfs
version:             0.1.0.0
synopsis:            A FUSE-based file system to map Sereal-encoded files to filesystem hierarchy
homepage:            https://github.com/manzur/serealfs
license:             PublicDomain
license-file:        LICENSE
author:              Manzur Mukhitdinov
maintainer:          noname@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable serealfs
  main-is: serealfs.hs
  build-depends:       base ==4.6.*, split ==0.2.*, bytestring ==0.10.*, unix ==2.6.*, HFuse ==0.2.*, binary ==0.7.*, data-binary-ieee754 ==0.4.*, safe ==0.3.*, containers ==0.5.*, utf8-string ==0.3.*, hslogger ==1.2.*, directory ==1.2.*
  ghc-options: -threaded
